fixed app height on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -272,7 +272,7 @@ img {
     box-shadow: var(--shadow);
     padding: 1.5rem;
     margin-bottom: 1rem;
-    max-height: 82svh;
+    max-height: 82dvh;
 }
 
 .error-page {
